modules/gdscript/tests/scripts/analyzer/errors/modify_immutable_function_parameter.gd
func test():
	test_function(1.0);

func test_function(let immutable_parameter):
	immutable_parameter = 0.0;

	print(immutable_parameter);
